# Konexion

./: .instructions.md  .pre-commit-config-dev.yaml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PRE_COMMIT_SETUP.md  PRE_COMMIT_SUMMARY.md  README.md  bandit.yaml  docker-compose.yml  mypy.ini  pyrightconfig.json
.github/: copilot-instructions.md
konexion_backend/: .gitignore  README.md  config.py  example.env  main.py  model_registry.py  pyproject.toml  ruff.toml  vision.py
konexion_backend/ai_clients/: __init__.py  unified_client.py
konexion_backend/ai_models/: __init__.py  groq.py  ollama.py
konexion_backend/dependencies/: auth.py
konexion_backend/models/: __init__.py  ai.py  db_model.py  user_model.py
konexion_backend/routers/: auth_router.py
konexion_backend/services/: auth_service.py  oauth_providers.py  unified_ai_service.py  vision_service.py
konexion_backend/utils/: model_registry.py
konexion_frontend/: .gitignore  .prettierignore  .prettierrc.json  ENV_VARIABLES.md  README.md  docker.env  example.env  package-lock.json  package.json  vite.config.js
konexion_frontend/src/: app.css  app.html
konexion_frontend/src/lib/: api.js  auth.js  config.js  models.js  performance.js  stores.js  validation.js  websocket.js
konexion_frontend/src/lib/components/: ChatInput.svelte  ChatWindow.svelte  ClearChatButton.svelte  CodeBlock.svelte  ConnectionStatus.svelte  ErrorMessage.svelte  Header.svelte  KeyboardShortcuts.svelte  Layout.svelte  LoadingSpinner.svelte  MaxTokensSelector.svelte  MessageBubble.svelte  Modal.svelte  RefreshModelsButton.svelte  Sidebar.svelte  TypingIndicator.svelte  WelcomeMessage.svelte
konexion_frontend/src/routes/: +layout.svelte  +page.svelte
konexion_frontend/src/routes/login/: +page.svelte
konexion_frontend/static/: code-demo.html  debug-dark.html  test-v4-dark.html
